Changelog
=========

2.0.3 - unreleased
------------------


2.0.2 - 2011-05-12
------------------

* Optimize images and icon file sizes.
  [hannosch]

* More significant icon for application/msword files.
  From http://www.famfamfam.com/
  Closes http://dev.plone.org/plone/ticket/11336.
  [thomasdesvenain]

* Convert import step to be registered in ZCML partially fixing #8350
  [kiorky]

2.0.1 - 2010-07-15
------------------

* Removed the invalid `text/python-source` mime type declaration and replaced
  it with the valid but unofficial `text/x-python`.
  [hannosch]

2.0 - 2010-07-01
----------------

* Updated icons to a more modern set from Tango and Plone.
  [limi]

2.0b1 - 2009-12-27
------------------

* Use standard logging instead of relying on Archetypes helpers.
  [hannosch]

* Removed BBB code for zope.contenttype.
  [hannosch]

2.0a1 - 2009-11-13
------------------

* Avoid acquiring `mimetypes_registry` and call it via a proper API.
  [hannosch]

* Avoid acquiring `portal_properties` and call it via a proper API.
  [hannosch]

* Cleaned up package metadata and general code.
  [hannosch]

* Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

* Purged old Zope 2 Interface interfaces for Zope 2.12 compatibility.
  Consider branching before this revision if release required before Plone 4.
  [elro]

1.6.4 - UNRELEASED
------------------


1.6.3 - 2009-05-16
------------------

* Fix bug due to removed version.txt in 1.6.2.
  [wichert]

1.6.2 - 2009-05-16
------------------

* Updated freedesktop.org shared-mime-info from the
  shared-mime-info-0.51.tar.bz2 file.
  [sidnei]

* Added Office 2007 mime types to the mime.types file, which was
  copied from Apache ages ago. The current version of Apache doesn't
  contain those yet, nor does the shared-mime-info. Care must be taken
  when this file is updated again to make sure those mime types are
  not removed accidentally.
  [sidnei]

1.6.1 - 2008-09-30