@@ -1,4 +1,5 @@
 from Products.MimetypesRegistry import MimeTypesRegistry
+from AccessControl.SecurityInfo import allow_module, allow_class
 
 GLOBALS = globals()
 PKG_NAME = 'MimetypesRegistry'
@@ -8,10 +9,14 @@ tools = (
     )
 
 from Products.MimetypesRegistry import mime_types
+from Products.MimetypesRegistry.common import MimeTypeException
+
+allow_module('Products.MimetypesRegistry.common')
+allow_class(MimeTypeException)
 
 def initialize(context):
     from Products.CMFCore import utils
-    utils.ToolInit("%s Tool" % PKG_NAME, 
+    utils.ToolInit("%s Tool" % PKG_NAME,
                    tools=tools,
                    icon="tool.gif",
                    ).initialize(context)
